# exa-labs_exa-mcp-server

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
fastmcp_server/: .gitignore  Dockerfile  __init__.py  server.py
fastmcp_server/tests/: __init__.py  test_server.py
